--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dependencies": {
       "bullmq": "^4.15.1",
       "dotenv": "^16.4.5",
-      "ioredis": "^5.4.1"
+      "ioredis": "^5.4.1",
+      "axios": "^1.4.0"
     },
     "devDependencies": {
       "nodemon": "^3.0.2"
